# gl4es4vita-sdl2-gear

./: .gitignore  CMakeLists.txt  OpenGLStubs.h  README.md  main.cpp
vita/module/: libGL.suprx  libGL_debug.suprx
vita/sce_sys/livearea/contents/: template.xml
